--- a/forms.html
+++ b/forms.html
@@ -12,7 +12,7 @@
         <label for="pswd">Password:</label>
         <input type="password" pass="pswd" id="pswd" required><br>
         <a href="##">Forget Password</a><br>
-        <input type="submit">
+        <input type="submit" value="login">
     </form>
 </body>
 </html>
